--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit>=1.36.0
-transformers>=4.41.0
-torch>=2.2.0
-sentence-transformers>=3.0.0
-faiss-cpu>=1.8.0
-langchain>=0.2.0
-numpy>=1.26.0
-pandas>=2.2.0
-groq>=0.9.0
-easyocr>=1.7.1
-Pillow>=10.3.0
+streamlit==1.36.0
+transformers==4.42.4
+torch==2.4.1
+sentence-transformers==3.0.1
+faiss-cpu==1.8.0
+langchain==0.2.0
+numpy==1.26.4
+pandas==2.2.2
+groq==0.9.0
+easyocr==1.7.1
+Pillow==10.4.0
+
