--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 streamlit==1.36.0
-transformers==4.42.4
-torch==2.8.0
-sentence-transformers==3.1.1
-scikit-learn==1.5.2
+fastembed
 faiss-cpu==1.8.0
-langchain==0.2.0
 numpy==1.26.4
 pandas==2.2.2
 groq==0.9.0
 Pillow==10.4.0
-# (opcional, activa OCR pero alarga el build)
+# Opcional (activa la pestaña OCR, pero alarga el build):
 # easyocr==1.7.1
+
 
