--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 streamlit==1.36.0
-fastembed
-faiss-cpu==1.8.0
-numpy==1.26.4
-pandas==2.2.2
+numpy>=2.1.0,<2.4
+pandas>=2.2.3,<2.4
 groq==0.9.0
+fastembed>=0.3.5
+onnxruntime>=1.22.0
 Pillow==10.4.0
-# Opcional (activa la pestaña OCR, pero alarga el build):
+# OCR opcional (NO lo actives por ahora: trae PyTorch y pesará mucho)
 # easyocr==1.7.1
-
 
