--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 streamlit==1.36.0
 numpy>=2.1.0,<2.4
 pandas>=2.2.3,<2.4
+
 groq==0.9.0
+httpx==0.27.2    # compat con groq 0.9.x
+
 fastembed>=0.3.5
 onnxruntime>=1.22.0
 Pillow==10.4.0
-# OCR opcional (NO lo actives por ahora: trae PyTorch y pesará mucho)
+
+# OCR opcional (aumenta el tiempo de build):
 # easyocr==1.7.1
 
