--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy>=2.1.0,<2.4
 pandas>=2.2.3,<2.4
 
 groq==0.9.0
-httpx==0.27.2    # compat con groq 0.9.x
+httpx==0.27.2
 
-fastembed>=0.3.5
+fastembed==0.5.1
 onnxruntime>=1.22.0
 rank-bm25==0.2.2
